--- a/frontEnd/vite-project/package.json
+++ b/frontEnd/vite-project/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^5.15.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spotify-web-playback": "^0.14.2",
     "react-webcam": "^7.2.0"
   },
   "devDependencies": {
